# polymarket_fair_value_engine

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: football_strategy_baseline.json  football_sweep.json
data/: sample_football_markets.json  sample_football_replay.jsonl  sample_replay.jsonl
docs/: design.md  football_decision_casebook.md  football_match_state_reaction_note.md  football_post_trade_analysis_note.md  football_replay_walkthrough.md  football_research_dashboard.md  football_strategy_configuration_note.md  football_strategy_sweep_walkthrough.md  football_trading_research_note.md
docs/sample_outputs/: README.md
docs/sample_outputs/football_demo_reference/: README.md  football_edges.csv  football_fair_values.csv  summary.json
docs/sample_outputs/football_replay_reference/: README.md  football_calibration.csv  football_markouts.csv  football_no_trade_reasons.csv  football_replay_quotes.csv  football_report.md  football_state_changes.csv  summary.json
docs/sample_outputs/football_sweep_reference/: README.md  football_strategy_best.json  summary.json  (+3 more)
legacy/: polymarket_bot.py
scripts/: demo.ps1  demo.sh  refresh_sample_outputs.py  verify_committed_artifacts.py
src/polymarket_fair_value_engine/: __init__.py  cli.py  config.py  logging_utils.py  types.py
tests/: test_backtest.py  test_cli.py  test_committed_artifacts.py  test_football_replay.py  test_football_sweep.py  test_markets.py  test_models.py  test_order_manager.py  test_paper_execution.py  test_risk.py  test_sports.py  test_strategy.py
(+48 files in other folders)
